// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given <Control /> When initializes And uses children Then should match the snapshot 1`] = `
<div>
  <div
    class="control"
  >
    <input
      class="input is-text"
      type="text"
    />
    <input
      class="input is-date"
      type="date"
    />
  </div>
</div>
`;

exports[`Given <Control /> When initializes Then should match the snapshot 1`] = `
<div>
  <div
    class="control"
  >
    <input
      class="input is-text"
      type="text"
    />
  </div>
</div>
`;
